fixed spacing

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
 
 .container {
 	min-height: 100%;
-	max-width: 40%;
+	max-width: 600px;
 	margin: 0 auto;
 }
 
